--- a/about_us.html
+++ b/about_us.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link href="https://fonts.googleapis.com/css2?family=Geom&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About Us - The Strangers</title>
@@ -23,6 +25,8 @@
   <div class="header-overlay">
   </div>
 </header>
+
+
   <!-- About Section -->
   <section>
     <h1>About Us</h1>
