--- a/contact.html
+++ b/contact.html
@@ -21,6 +21,8 @@
   </nav>
 
 <header class="page-header">
+  <link href="https://fonts.googleapis.com/css2?family=Geom&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
   <img src="img/contancts2.jpg" alt="The Strangers live">
   <div class="header-overlay">
   </div>
