--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link href="https://fonts.googleapis.com/css2?family=Geom&display=swap" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>The Strangers </title>
@@ -28,48 +30,48 @@
  
 <section>
   <h1>The Strangers – Official Website</h1>
+  <p><i>Eh si.. Siamo una band di 17 persone!</i></p>
 
 
   <!-- Image Slider -->
-  <div class="image-slider">
+<div class="image-slider">
     <button class="img-btn prev">&#10094;</button>
 
     <div class="img-track">
-      <img src="img/slider/IMG1.jpg" alt="Live show">
-      <img src="img/slider/IMG2.jpg" alt="Live show">
-      <img src="img/slider/IMG3.jpg" alt="Live show">
-      <img src="img/slider/IMG4.5.jpeg" alt="Live show">
-      <img src="img/slider/IMG4.jpeg" alt="Live show">
-      <img src="img/slider/IMG5.jpeg" alt="Live show">
-      <img src="img/slider/IMG6.jpg" alt="Live show">
-      <img src="img/slider/IMG7.jpeg" alt="Live show">
-      <img src="img/slider/IMG8.JPEG" alt="Live show">
-      <img src="img/slider/IMG9.5.jpeg" alt="Live show">
-      <img src="img/slider/IMG9.jpg" alt="Live show">
-      <img src="img/slider/IMG10.jpeg" alt="Live show">
-      <img src="img/slider/IMG11.jpg" alt="Live show">
-      <img src="img/slider/IMG12.jpeg" alt="Live show">
-      <img src="img/slider/IMG13.jpg" alt="Live show">
-      <img src="img/slider/IMG15.jpg" alt="Live show">
-      <img src="img/slider/IMG16.JPEG" alt="Live show">
-      <img src="img/slider/IMG17.jpeg" alt="Live show">
-      <img src="img/slider/IMG18.jpeg" alt="Live show">
-      <img src="img/slider/IMG19.JPEG" alt="Live show">
-      <img src="img/slider/IMG20.jpg" alt="Live show">
-      <img src="img/slider/IMG21.JPEG" alt="Live show">
-      <img src="img/slider/IMG22.JPEG" alt="Live show">
-      <img src="img/slider/IMG23.jpeg" alt="Live show">
-      <img src="img/slider/IMG24.jpg" alt="Live show">
-      <img src="img/slider/IMG26.JPEG" alt="Live show">
+        <div class="slide"><img src="img/slider/IMG1.jpg" alt="Live show"></div>
+        <div class="slide"><img src="img/slider/IMG2.jpg" alt="Live show"></div>
+        <div class="slide"><img src="img/slider/IMG3.jpg" alt="Live show"></div>
+        <div class="slide"><img src="img/slider/IMG4.5.jpeg" alt="Live show"></div>
+        <div class="slide"><img src="img/slider/IMG4.jpeg" alt="Live show"></div>
+        <div class="slide"><img src="img/slider/IMG5.jpeg" alt="Live show"></div>
+        <div class="slide"><img src="img/slider/IMG6.jpg" alt="Live show"></div>
+        <div class="slide"><img src="img/slider/IMG7.jpeg" alt="Live show"></div>
+        <div class="slide"><img src="img/slider/IMG8.JPEG" alt="Live show"></div>
+        <div class="slide"><img src="img/slider/IMG9.5.jpeg" alt="Live show"></div>
+        <div class="slide"><img src="img/slider/IMG9.jpg" alt="Live show"></div>
+        <div class="slide"><img src="img/slider/IMG10.jpeg" alt="Live show"></div>
+        <div class="slide"><img src="img/slider/IMG11.jpg" alt="Live show"></div>
+        <div class="slide"><img src="img/slider/IMG12.jpeg" alt="Live show"></div>
+        <div class="slide"><img src="img/slider/IMG13.jpg" alt="Live show"></div>
+        <div class="slide"><img src="img/slider/IMG15.jpg" alt="Live show"></div>
+        <div class="slide"><img src="img/slider/IMG16.JPEG" alt="Live show"></div>
+        <div class="slide"><img src="img/slider/IMG17.jpeg" alt="Live show"></div>
+        <div class="slide"><img src="img/slider/IMG18.jpeg" alt="Live show"></div>
+        <div class="slide"><img src="img/slider/IMG19.JPEG" alt="Live show"></div>
+        <div class="slide"><img src="img/slider/IMG20.jpg" alt="Live show"></div>
+        <div class="slide"><img src="img/slider/IMG21.JPEG" alt="Live show"></div>
+        <div class="slide"><img src="img/slider/IMG22.JPEG" alt="Live show"></div>
+        <div class="slide"><img src="img/slider/IMG23.jpeg" alt="Live show"></div>
+        <div class="slide"><img src="img/slider/IMG24.jpg" alt="Live show"></div>
+        <div class="slide"><img src="img/slider/IMG26.JPEG" alt="Live show"></div>
     </div>
 
     <button class="img-btn next">&#10095;</button>
-  </div>
-
+</div>
   
-  <p><i>Eh si.. Siamo una band di 17 persone!</i></p>
+
   <h2>VIVA!</h2>
-  <a href="music.html" class="cta-link">Listen Now</a>
+  <a href="music.html" class="cta-link"> LISTEN NOW</a>
 </section>
 
 
