--- a/music.html
+++ b/music.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link href="https://fonts.googleapis.com/css2?family=Geom&display=swap" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Music - The Strangers</title>
@@ -146,8 +148,8 @@ referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <div class="event-card">
       <img src="img/loc/Locandina12.JPEG" alt="Private Event">
       <p class="event-caption">
-        <strong>Stagione Matrimoni 2024</strong><br>
-       10/05/2024
+        <strong>Stagione Matrimoni</strong><br>
+       2022 - 2024
       </p>
     </div>
     
