--- a/index.html
+++ b/index.html
@@ -91,34 +91,65 @@
   </div>
 </footer>
 
-
-
 <script>
-  const track = document.querySelector('.img-track');
-  const images = document.querySelectorAll('.img-track img');
-  const prev = document.querySelector('.img-btn.prev');
-  const next = document.querySelector('.img-btn.next');
+document.addEventListener("DOMContentLoaded", () => {
+    const sections = document.querySelectorAll("section");
 
-  let current = 0;
+    const observer = new IntersectionObserver((entries) => {
+        entries.forEach(entry => {
+            if (entry.isIntersecting) {
+                entry.target.classList.add("visible");
+                observer.unobserve(entry.target); // animate only once
+            }
+        });
+    }, { threshold: 0.05 }); // trigger when 10% visible
 
-  function updateSlider() {
-    track.style.transform = `translateX(-${current * 100}%)`;
-  }
+    sections.forEach(section => observer.observe(section));
+});
+</script>
+<script>
+document.addEventListener("DOMContentLoaded", () => {
+    const track = document.querySelector(".img-track");
+    const slides = document.querySelectorAll(".slide");
+    const prevBtn = document.querySelector(".img-btn.prev");
+    const nextBtn = document.querySelector(".img-btn.next");
 
-  next.addEventListener('click', () => {
-    current = (current + 1) % images.length;
-    updateSlider();
-  });
+    let currentIndex = 0;
+    const totalSlides = slides.length;
+    const slideWidth = 100; // percent
 
-  prev.addEventListener('click', () => {
-    current = (current - 1 + images.length) % images.length;
-    updateSlider();
-  });
+    // Function to show slide by index
+    function goToSlide(index) {
+        track.style.transform = `translateX(-${index * slideWidth}%)`;
+    }
 
-  setInterval(() => {
-  index = (index + 1) % images.length;
-  updateSlider();
-}, 6000);
+    // Next / Prev buttons
+    nextBtn.addEventListener("click", () => {
+        currentIndex = (currentIndex + 1) % totalSlides;
+        goToSlide(currentIndex);
+        resetInterval(); // restart autoplay
+    });
+
+    prevBtn.addEventListener("click", () => {
+        currentIndex = (currentIndex - 1 + totalSlides) % totalSlides;
+        goToSlide(currentIndex);
+        resetInterval(); // restart autoplay
+    });
+
+    // Auto-play
+    let slideInterval = setInterval(() => {
+        currentIndex = (currentIndex + 1) % totalSlides;
+        goToSlide(currentIndex);
+    }, 4000); // change every 4 seconds
+
+    function resetInterval() {
+        clearInterval(slideInterval);
+        slideInterval = setInterval(() => {
+            currentIndex = (currentIndex + 1) % totalSlides;
+            goToSlide(currentIndex);
+        }, 4000);
+    }
+});
 </script>
 
 
