--- a/about_us.html
+++ b/about_us.html
@@ -145,5 +145,22 @@
     });
   </script>
 
+<script>
+document.addEventListener("DOMContentLoaded", () => {
+    const sections = document.querySelectorAll("section");
+
+    const observer = new IntersectionObserver((entries) => {
+        entries.forEach(entry => {
+            if (entry.isIntersecting) {
+                entry.target.classList.add("visible");
+                observer.unobserve(entry.target); // animate only once
+            }
+        });
+    }, { threshold: 0.05 }); // trigger when 10% visible
+
+    sections.forEach(section => observer.observe(section));
+});
+</script>
+
 </body>
 </html>
