--- a/contact.html
+++ b/contact.html
@@ -68,5 +68,21 @@
         <img src="img/minilogo_2.jpg" alt="The Strangers Band Logo" class="footer-logo">
   </div>
 </footer>
+<script>
+document.addEventListener("DOMContentLoaded", () => {
+    const sections = document.querySelectorAll("section");
+
+    const observer = new IntersectionObserver((entries) => {
+        entries.forEach(entry => {
+            if (entry.isIntersecting) {
+                entry.target.classList.add("visible");
+                observer.unobserve(entry.target); // animate only once
+            }
+        });
+    }, { threshold: 0.05 }); // trigger when 10% visible
+
+    sections.forEach(section => observer.observe(section));
+});
+</script>
 </body>
 </html>
