--- a/music.html
+++ b/music.html
@@ -254,5 +254,22 @@ referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 </script>
 
+<script>
+document.addEventListener("DOMContentLoaded", () => {
+    const sections = document.querySelectorAll("section");
+
+    const observer = new IntersectionObserver((entries) => {
+        entries.forEach(entry => {
+            if (entry.isIntersecting) {
+                entry.target.classList.add("visible");
+                observer.unobserve(entry.target); // animate only once
+            }
+        });
+    }, { threshold: 0.05 }); // trigger when 10% visible
+
+    sections.forEach(section => observer.observe(section));
+});
+</script>
+
 </body>
 </html>
