--- a/index.html
+++ b/index.html
@@ -55,15 +55,20 @@
         <div class="slide"><img src="img/slider/IMG13.jpg" alt="Live show"></div>
         <div class="slide"><img src="img/slider/IMG15.jpg" alt="Live show"></div>
         <div class="slide"><img src="img/slider/IMG16.JPEG" alt="Live show"></div>
+        <div class="slide"><img src="img/slider/IMG18.5.JPEG" alt="Live show"></div>
         <div class="slide"><img src="img/slider/IMG17.jpeg" alt="Live show"></div>
-        <div class="slide"><img src="img/slider/IMG18.jpeg" alt="Live show"></div>
+        <div class="slide"><img src="img/slider/IMG18.jpg" alt="Live show"></div>
         <div class="slide"><img src="img/slider/IMG19.JPEG" alt="Live show"></div>
-        <div class="slide"><img src="img/slider/IMG20.jpg" alt="Live show"></div>
+        <div class="slide"><img src="img/slider/IMG20.jpeg" alt="Live show"></div>
         <div class="slide"><img src="img/slider/IMG21.JPEG" alt="Live show"></div>
+        <div class="slide"><img src="img/slider/IMG21.jpg" alt="Live show"></div>
+           <div class="slide"><img src="img/slider/IMG22.5.JPEG" alt="Live show"></div>
         <div class="slide"><img src="img/slider/IMG22.JPEG" alt="Live show"></div>
         <div class="slide"><img src="img/slider/IMG23.jpeg" alt="Live show"></div>
         <div class="slide"><img src="img/slider/IMG24.jpg" alt="Live show"></div>
+          <div class="slide"><img src="img/slider/IMG25.JPEG" alt="Live show"></div>
         <div class="slide"><img src="img/slider/IMG26.JPEG" alt="Live show"></div>
+        <div class="slide"><img src="img/slider/IMG27.JPEG" alt="Live show"></div>
     </div>
 
     <button class="img-btn next">&#10095;</button>
