--- a/about_us.html
+++ b/about_us.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <link href="https://fonts.googleapis.com/css2?family=Geom&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About Us - The Strangers</title>
@@ -131,19 +131,26 @@
 </footer>
 
   <!-- JS for mobile tap effect -->
-  <script>
-    const containers = document.querySelectorAll('.image-container');
+<script>
+document.querySelectorAll('.image-container').forEach(container => {
+  const img = container.querySelector('.section-img');
+  const overlay = container.querySelector('.overlay-text');
 
-    containers.forEach(container => {
-      container.addEventListener('click', () => {
-        const img = container.querySelector('.section-img');
-        const overlay = container.querySelector('.overlay-text');
+  container.addEventListener('click', () => {
+    const isOpen = overlay.classList.contains('visible');
 
-        img.classList.toggle('hovered');
-        overlay.classList.toggle('visible');
-      });
-    });
-  </script>
+    // Close all others first (so only one is open)
+    document.querySelectorAll('.overlay-text.visible').forEach(o => o.classList.remove('visible'));
+    document.querySelectorAll('.section-img.hovered').forEach(i => i.classList.remove('hovered'));
+
+    // Toggle this one
+    if (!isOpen) {
+      overlay.classList.add('visible');
+      img.classList.add('hovered');
+    }
+  });
+});
+</script>
 
 <script>
 document.addEventListener("DOMContentLoaded", () => {
