--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="slide"><img src="img/slider/IMG15.jpg" alt="Live show"></div>
         <div class="slide"><img src="img/slider/IMG16.JPEG" alt="Live show"></div>
         <div class="slide"><img src="img/slider/IMG18.5.JPEG" alt="Live show"></div>
-        <div class="slide"><img src="img/slider/IMG17.jpeg" alt="Live show"></div>
+        <div class="slide"><img src="img/slider/IMG17.JPEG" alt="Live show"></div>
         <div class="slide"><img src="img/slider/IMG18.jpg" alt="Live show"></div>
         <div class="slide"><img src="img/slider/IMG19.JPEG" alt="Live show"></div>
         <div class="slide"><img src="img/slider/IMG20.jpeg" alt="Live show"></div>
@@ -74,9 +74,9 @@
     <button class="img-btn next">&#10095;</button>
 </div>
   
-
-  <h2>VIVA!</h2>
   <a href="music.html" class="cta-link"> LISTEN NOW</a>
+  <h1>VIVA!</h1>
+
 </section>
 
 
