--- a/index.html
+++ b/index.html
@@ -74,8 +74,7 @@
     <button class="img-btn next">&#10095;</button>
 </div>
   
-  <a href="music.html" class="cta-link"> LISTEN NOW</a>
-  <h1>VIVA!</h1>
+  <a href="music.html" class="cta-link"><img src="img/listennow2.png" ></a>
 
 </section>
 
